Changing "#" to "." on table as well as making the table layout fixed, fixed the table size but the cells were overflowing.

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -5,7 +5,8 @@ width: 40%;
     /* The width is the width of the web page */	    /* The width is the width of the web page */
     float: left;
 }
-#table {
+.table {
     width: 55%;
     float: right;
+    table-layout: fixed;
 }
